--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="./styles.css"
+      href="styles.css"
     />
   </head>
   <body>
