--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
         <div class="photo">
           <img
-            src="E:\projects\CV copy\WhatsApp Image 2021-12-15 at 3.37.05 PM.jpeg"
+            src="/WhatsApp Image 2021-12-15 at 3.37.05 PM.jpeg"
           />
         </div>
       </div>
